<resources>
    <string name="app_name" translatable="false">MtcdTools</string>
    <string name="CreateNewBinding">Create a new binding</string>
    <string name="CreateNewAction">Create a new action</string>
    <string name="CreateNewActionsList">Create a new actions list</string>
    <string name="ApplicationSettings">Settings</string>
    <string name="ManageBindings">Manage bindings</string>

    <string name="CreateNewBroadcastIntentAction">Create a new broadcast Intent action</string>
    <string name="CreateNewKeyAction">Create a new key action</string>
    <string name="CreateNewLaunchAction">Create a new launch action</string>
    <string name="CreateNewStartIntentAction">Create a new start intent action</string>

    <string name="ObtainKeysSequence">Obtain keys sequence</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>

    <string name="KeyCodes">Key codes</string>
    <string name="Applications">Applications</string>

    <string name="IntentCategory">Intent category</string>
    <string name="IntentData">Intent data</string>
    <string name="IntentType">Intent type</string>
    <string name="IntentExtras">Intent extras</string>
    <string name="BroadcastPermissions">Broadcast permissions</string>
    <string name="IntentPackage">Intent package</string>
    <string name="KeysSequence">Keys sequence</string>
    <string name="KeysSequenceUp">UP keys sequence</string>
    <string name="KeysSequenceDown">DOWN keys sequence</string>
    <string name="Reset">Reset</string>
    <string name="EmptyNameError">Please provide name</string>

    <string name="MtcdServiceDescription">Service is now active.</string>
    <string name="PersistentNotificationChannel">Persistent notification</string>
    <string name="ServiceUnavailable">Service is unavailable</string>
    <string name="ObjectNotFound">Object not found</string>
    <string name="UnknownObjectType">Unknown object type</string>
    <string name="ObjectAlreadyAdded">Object already added</string>
    <string name="ProvideKeysSequence">Please provide keys sequence</string>
    <string name="Name">Name</string>
    <string name="VoiceCommandExecutionDelay">Voice command execution delay</string>
    <string name="KeyPressSpeed">Key press speed</string>
    <string name="IntentAction">Intent action</string>
    <string name="Misc">Misc</string>
    <string name="VoiceCommands">Voice commands</string>
    <string name="StoreSettings">Store settings</string>
    <string name="ActionsVoiceDelimiter">Actions voice delimiter (e.g. X then Y)</string>
    <string name="Donate">Have you enjoyed MtcdTools? Donate author (PayPal): michal.szwaj [at] o2 [dot] pl</string>
    <string name="ClassName">Class name</string>
    <string name="Flags">Flags</string>
    <string name="ManageObjects">Manage objects</string>
    <string name="Objects">Objects</string>
    <string name="AddObject">Add object</string>
    <string name="CreateNewActionsSequence">Create a new actions sequence</string>
    <string name="ActionExecutionDelay">Delay of execution action from list</string>
    <string name="SpeechPrompt">How can I help you?</string>
    <string name="CreateNewModeList">Create a new MODE list</string>
    <string name="ManageAutorun">Manage autorun</string>
    <string name="Activity">Activity</string>
    <string name="Service">Service</string>
    <string name="IndicatePress">Key pressed sound</string>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
</resources>
