<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_spacing"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/homeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="32sp"
                android:text="@string/app_name" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonCreateNewAction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateNewAction" />

        <Button
            android:id="@+id/buttonCreateNewActionsList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateNewActionsList" />

        <Button
            android:id="@+id/buttonCreateNewActionsSequence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateNewActionsSequence" />

        <Button
            android:id="@+id/buttonCreateNewModeList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateNewModeList" />

        <Button
            android:id="@+id/buttonCreateNewBinding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CreateNewBinding" />

        <Button
            android:id="@+id/buttonManageNamedObjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ManageObjects" />

        <Button
            android:id="@+id/buttonManageBindings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ManageBindings" />

        <Button
            android:id="@+id/buttonManageAutorun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ManageAutorun" />

        <Button
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ApplicationSettings" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Donate"
            android:textAlignment="gravity"
            android:textColor="@android:color/holo_green_dark" />
    </LinearLayout>
</ScrollView>
