<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_spacing">
    <TextView
        android:layout_marginBottom="@dimen/element_spacing"
        android:text="@string/KeysSequence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_marginBottom="@dimen/element_spacing"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/listViewKeysSequence" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/Cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel"
            android:layout_weight="1" />

        <Button
            android:text="@string/Reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonReset"
            android:layout_weight="1" />

        <Button
            android:text="@string/Save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>
