<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/layout_spacing"
    android:orientation="vertical"
    tools:context="com.f1x.mtcdtools.activities.SettingsActivity">

    <TextView
        android:text="@string/ActionExecutionDelay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_spacing"
        android:id="@+id/textViewActionExecutionDelay" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewActionExecutionDelayValue" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing"
            android:id="@+id/seekBarActionExecutionDelay"
            android:max="10" />
    </LinearLayout>

    <TextView
        android:text="@string/KeyPressSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/element_spacing"
        android:id="@+id/TextViewKeyPressSpeed" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewKeyPressSpeedValue" />

        <SeekBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/element_spacing"
            android:id="@+id/seekBarKeyPressSpeed"
            android:max="3000" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/Cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel"
            android:layout_weight="1" />

        <Button
            android:text="@string/Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>
