<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_new_action"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.f1x.mtcdtools.activities.actions.CreateActionActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:text="@string/CreateNewBroadcastIntentAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:id="@+id/buttonCreateNewBroadcastIntentAction"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/CreateNewKeyAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonCreateNewBroadcastIntentAction"
                android:layout_alignEnd="@+id/buttonCreateNewBroadcastIntentAction"
                android:id="@+id/buttonCreateNewKeyAction"
                android:layout_alignParentStart="true" />

            <Button
                android:text="@string/CreateNewLaunchAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonCreateNewKeyAction"
                android:layout_alignParentStart="true"
                android:id="@+id/buttonCreateNewLaunchAction"
                android:layout_alignParentEnd="true" />

            <Button
                android:text="@string/CreateNewStartActivityAction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/buttonCreateNewLaunchAction"
                android:layout_alignParentStart="true"
                android:id="@+id/buttonCreateNewStartActivityAction"
                android:layout_alignParentEnd="true" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
